--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <link  rel="stylesheet" href="//at.alicdn.com/t/c/font_3857507_cvrzoh454en.css"
+    <link  rel="stylesheet" href="//at.alicdn.com/t/c/font_3857507_5o67zdyxl5w.css"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
+
+  <!--引入Element 和 Vue的CDN加速-->
+<!-- <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.12/lib/theme-chalk/index.css">
+<script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
+<script src="https://unpkg.com/element-ui@2.15.12/lib/index.js"></script> -->
   <body>
     <noscript>
       <strong
